--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
     <a href="./pages/sinah-geographic/sinah-geographic.html">
       sinah-geographic
     </a>
+    <a href="./pages/CRAPPO/crappo.html"> CRAPPO </a>
   </body>
 </html>
