--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
       sinah-geographic
     </a>
     <a href="./pages/CRAPPO/crappo.html"> CRAPPO </a>
+    <a href="./pages/aviation/aviation.html"> Aviation </a>
   </body>
 </html>
